@@ -102,6 +102,13 @@ public:
     */
    void stop()
    {
+      // Close all open windows/contexts.
+      std::vector<GlWindow*> windows = getOpenWindows();
+      for (std::vector<GlWindow*>::iterator itr = windows.begin() ; itr != windows.end() ; itr++)
+      {
+         removeWindow(*itr);
+      }
+
       mControlExit = 1;     // Set the control loop exit flag
       
       // We don't actually need to call completeRender() or completeSwap()
